Reduce logo so it shows correctly on mobile

--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ a img.aligncenter {
 }
 
 #mainNav.navbar-shrink .navbar-brand img{
-	max-width: 13em;
+	max-width: 9em;
 }
 
 
@@ -2621,5 +2621,5 @@ select.mobile-device {
     GSS LOGO
 -------------------------------------------------------------------*/
 img.logo {
-  max-width: 15em;
+  max-width: 9em;
 }
